tests/cases/should_fail/unclosed_set_literal/case.stderr
error: encountered unclosed delimiter `{`, add a `}` after the inner expression
 --> $DIR/case.hash:1:9
1 |   k := set{ 1,
  |           ^ here
